--- a/homestyle.css
+++ b/homestyle.css
@@ -2,7 +2,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
   *{
-    margin: 0;
+    margin: 10px;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
@@ -15,7 +15,7 @@
 
   .container{
     max-width: 900px;
-    margin: 100 auto;
+    margin: 0 auto;
   }
 
 /* .header con esta propidad hace la imagen de fondo*/
