--- a/homestyle.css
+++ b/homestyle.css
@@ -2,7 +2,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
   *{
-    margin: 10px;
+    margin: auto;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
@@ -15,7 +15,6 @@
 
   .container{
     max-width: 900px;
-    min-width: 700px;
     margin: 0 auto;
   }
 
@@ -101,7 +100,7 @@
   .header-content p {
     font-size: 16px;
     color: coral;
-    padding: 0 800px;
+    padding: 0 200px;
     margin-bottom: 25px;
   }
 
