--- a/homestyle.css
+++ b/homestyle.css
@@ -3,7 +3,7 @@
 
   *{
     margin: auto;
-    padding: 0;
+    padding: 50px;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
