--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   }
   #login .container #login-row #login-column #login-box {
     margin-top: 20px;
-    max-width: 650px;
+    max-width: auto;
     height: 920px;
     border: 1px solid #9C9C9C;
     background-color: #EAEAEA;
