--- a/homestyle.css
+++ b/homestyle.css
@@ -89,7 +89,7 @@
     text-align: center;
   }
 
-  .header-content h1{
+  /*.header-content h1{
     font-size: 28px;
     line-height: 80px;
     color: chocolate;
@@ -97,7 +97,7 @@
     margin-bottom: 35px;
     margin-top: 55px;
   }
-
+*/
   .header-content p {
     font-size: 16px;
     color: coral;
