--- a/homestyle.css
+++ b/homestyle.css
@@ -1,6 +1,6 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
-
+/*
   *{
     margin: auto;
     padding: 50px;
@@ -19,7 +19,7 @@
     margin: 0 auto;
   }
 
-/* .header con esta propidad hace la imagen de fondo*/
+/* .header con esta propidad hace la imagen de fondo
 
   .header {
     background-image: linear-gradient(
@@ -97,7 +97,7 @@
     margin-bottom: 35px;
     margin-top: 55px;
   }
-*/
+
   .header-content p {
     font-size: 16px;
     color: coral;
