--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,14 @@
   #login .container #login-row #login-column #login-box #login-form #register-link {
     margin-top: -85px;
   }
+*/
+  imput.src{
+    width: 100%;
+    height: 100%;
+    background-image: "./public/images/logoo.png";
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #fff;
+
+  }
