--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     margin-top: -85px;
   }
 */
-  imput.src{
+.img-responsive{
     width: 100%;
     height: 100%;
     background-image: "./public/images/logoo.png";
